k8s/deployments.yaml
# Deployment for WalletAPIDB
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  wallet-api-db
  namespace: default
  labels:
    app:  wallet-api-db
spec:
  selector:
    matchLabels:
      app: wallet-api-db
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  wallet-api-db
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:

      - name:  wallet-api-db
        image:  mongo
        imagePullPolicy: IfNotPresent

        resources:
          requests:
            cpu: 500m
            memory: 500Mi
          limits:
            cpu: 500m
            memory: 500Mi

        # livenessProbe:
        #   tcpSocket:
        #     port: 80
        #   initialDelaySeconds: 5
        #   timeoutSeconds: 5
        #   successThreshold: 1
        #   failureThreshold: 3
        #   periodSeconds: 10

        # readinessProbe:
        #   httpGet:
        #     path: /_status/healthz
        #     port: 80
        #   initialDelaySeconds: 5
        #   timeoutSeconds: 2
        #   successThreshold: 1
        #   failureThreshold: 3
        #   periodSeconds: 10

        ports:
        - containerPort:  27017
          # name:  wallet-api
        volumeMounts:
        - name: localtime
          mountPath: /etc/localtime
      volumes:
        - name: localtime
          hostPath:
            path: /usr/share/zoneinfo/Asia/Taipei
      restartPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  wallet-api
  namespace: default
  labels:
    app:  wallet-api
spec:
  selector:
    matchLabels:
      app: wallet-api
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  wallet-api
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name:  wallet-api
        image: wallet-api-service:latest
        imagePullPolicy: Never
        # resources:
        #   requests:
        #     cpu: 500m
        #     memory: 500Mi
        #   limits:
        #     cpu: 500m
        #     memory: 500Mi
        # livenessProbe:
        #   tcpSocket:
        #     port: 8000
        #   initialDelaySeconds: 5
        #   timeoutSeconds: 5
        #   successThreshold: 1
        #   failureThreshold: 3
        #   periodSeconds: 10
        # readinessProbe:
        #   httpGet:
        #     path: /_status/healthz
        #     port: 8000
        #   initialDelaySeconds: 5
        #   timeoutSeconds: 2
        #   successThreshold: 1
        #   failureThreshold: 3
        #   periodSeconds: 10
        ports:
        - containerPort:  8000
          # name:  wallet-api
        volumeMounts:
        - name: localtime
          mountPath: /etc/localtime
      volumes:
        - name: localtime
          hostPath:
            path: /usr/share/zoneinfo/Asia/Taipei
      restartPolicy: Always
---
# Deployment for WalletKafka Setup
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  wallet-kafka
  namespace: default
  labels:
    app: wallet-kafka
spec:
  selector:
    matchLabels:
      app: wallet-kafka
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  wallet-kafka
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:

      - name:  wallet-kafka
        image:  confluentinc/cp-kafka:6.1.1
        imagePullPolicy: IfNotPresent

        # resources:
        #   requests:
        #     cpu: 500m
        #     memory: 500Mi
        #   limits:
        #     cpu: 500m
        #     memory: 500Mi

        ports:
        - containerPort:  29092
          # name:  wallet-api
        volumeMounts:
        - name: localtime
          mountPath: /etc/localtime
      volumes:
        - name: localtime
          hostPath:
            path: /usr/share/zoneinfo/Asia/Taipei
      restartPolicy: Always

---
# Deployment for WalletKafka Setup
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  wallet-zookeeper
  namespace: default
  labels:
    app: wallet-zookeeper
spec:
  selector:
    matchLabels:
      app: wallet-zookeeper
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  wallet-zookeeper
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:

      - name:  wallet-zookeeper
        image:  bitnami/zookeeper:latest
        imagePullPolicy: IfNotPresent

        # resources:
        #   requests:
        #     cpu: 500m
        #     memory: 500Mi
        #   limits:
        #     cpu: 500m
        #     memory: 500Mi

        ports:
        - containerPort:  2181
          # name:  wallet-api
        volumeMounts:
        - name: localtime
          mountPath: /etc/localtime
      volumes:
        - name: localtime
          hostPath:
            path: /usr/share/zoneinfo/Asia/Taipei
      restartPolicy: Always
